create school add

--- a/Classroom.Mvc/Views/Users/Profile.cshtml
+++ b/Classroom.Mvc/Views/Users/Profile.cshtml
@@ -9,3 +9,5 @@
 <h3>Firstname: @Model.FirstName</h3>
 <h3>Lastname: @Model.LastName</h3>
 <h3>Username: @Model.UserName</h3>
+
+<a asp-controller="Users" asp-action="Logout"> Logout</a>
