--- a/Classroom.Mvc/Views/Users/SignUp.cshtml
+++ b/Classroom.Mvc/Views/Users/SignUp.cshtml
@@ -32,17 +32,17 @@
     </div>
     <div class="mb-3">
         @*<label for="username" class="form-label">Username</label>*@
-        <input class="form-control" asp-for="Username" type="text" name="username" placeholder="Username">
+        <input class="form-control" asp-for="Username" type="text" name="Username" placeholder="Username">
         <span class="text-danger" asp-validation-for="Username"></span>
     </div>
     <div class="mb-3">
         @*<label for="username" class="form-label">Username</label>*@
-        <input class="form-control" asp-for="PhoneNumber" type="text" name="phonenumber" placeholder="Phonenumber">
-        <span class="text-danger" asp-validation-for="Username"></span>
+        <input class="form-control" asp-for="PhoneNumber" type="text" name="PhoneNumber" placeholder="Phonenumber">
+        <span class="text-danger" asp-validation-for="PhoneNumber"></span>
     </div>
     <div class="mb-3">
         @*<label for="password" class="form-label">Password</label>*@
-        <input class="form-control" asp-for="Password" type="password" name="password" placeholder="Password">
+        <input class="form-control" asp-for="Password" type="text" name="password" placeholder="Password">
         <span class="text-danger" asp-validation-for="Password"></span>
     </div>
     <button class="btn btn-primary" type="submit">SignUp</button>
