--- a/Classroom.Mvc/Views/Users/SignIn.cshtml
+++ b/Classroom.Mvc/Views/Users/SignIn.cshtml
@@ -15,7 +15,7 @@
         text-align: center;
     }
 </style>
-<h1 style="text-align:center;color: #0b5ed7">Sign Up</h1>
+<h1 style="text-align:center;color: #0b5ed7">Sign In</h1>
 
 <form class="row g-3" style="width: 400px; background-color: #00bfff; padding: 20px; margin: 0 auto;" asp-controller="Users" asp-action="SignIn" method="post">
    
